--- a/src/app/lista-produtos/lista-produtos.component.css
+++ b/src/app/lista-produtos/lista-produtos.component.css
@@ -1,3 +1,11 @@
 .descricao {
   font-size: 12px;
 }
+.compartilhar {
+  background-color: #55f;
+  border-radius: 5px;
+  color: #fff;
+  font-family: Verdana, Tahoma, sans-serif;
+  height: 30px;
+  width: 120px;
+}
