--- a/src/app/lista-produtos/lista-produtos.component.html
+++ b/src/app/lista-produtos/lista-produtos.component.html
@@ -11,5 +11,5 @@
     Descrição: {{ produto.descricao }}
   </p>
 
-  <button (click)="compartilhar()">Compartilhar</button>
+  <button class="compartilhar" (click)="compartilhar()">Compartilhar</button>
 </div>
