--- a/src/app/lista-produtos/lista-produtos.component.html
+++ b/src/app/lista-produtos/lista-produtos.component.html
@@ -12,4 +12,8 @@
   </p>
 
   <button class="compartilhar" (click)="compartilhar()">Compartilhar</button>
+
+  <!--
+    <app-alerta-produtos [produtos]="produto"> </app-alerta-produtos>
+  -->
 </div>
