--- a/src/app/alerta-produtos/alerta-produtos.component.html
+++ b/src/app/alerta-produtos/alerta-produtos.component.html
@@ -1,3 +1,5 @@
-<p *ngIf="produto && produto.prec0 > 700">
+<!--
+<p *ngIf="produto && produto.preco > 700">
   <button>Notificar</button>
 </p>
+-->
